trunk/mobile_portal/mobile_portal/site-media/css/groups/iphone.css
body {
    background:#bbc4ce url('../../png/new/gradients/backdrop-iphone.png') repeat-x top;

    font-family: "Liberation Sans", sans-serif;
    font-size:9pt;
    
    -webkit-text-size-adjust: none;
    
    text-align: left;
    margin: 0; 
}

/* Index Page Specific 
    - 1 CSS 2.1 Selector
    - 4 Webkit Only Tags
    -- Written in order of use on index.html
*/
div#index-header {
    width:100%;
    height:51px;
}
div#index-title {
    position:absolute;
    top:0;
    left:0;
}
div#index-search {
    position:absolute;
    top: 0;
    right:5px;
}
/* CSS 2.1 selector */
div#index-search input[type="text"] {
    float: left;
    /* Total height - 27px inc 2px border + 1px padding: does not correspond with 34px high search button, but displays correctly on iphone */
    height: 24px;
    width: 125px;
    font-size:1.2em;
    border: 2px solid #dddddd;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    -webkit-border-top-right-radius:0;
    -webkit-border-bottom-right-radius:0;
}
/* icon-menu & menu-x handles the menu icons on the front page 
    - this section would ideally be rewritten to handle a little more gracefully on varied sizes of screens */
ol.icon-menu {
    list-style:none;
    margin: 0;
    padding:5px;
}
ol.icon-menu li {
    display:inline-block;
    background-repeat:no-repeat;
    background-position:center 10px;
    vertical-align:top;
}
ol.icon-menu li a {
    width: 60px;
    height:2em;
    padding:4px;
    padding-top: 75px;
    text-align:center;
    display:block;
    text-decoration:none;
    color: #002147;
}
li#menu-contact {background-image:url('../../png/index-icons/contact.png');}
li#menu-maps {background-image:url('../../png/index-icons/maps.png');}
li#menu-podcasts {background-image:url('../../png/index-icons/podcasts.png');}
li#menu-webcams {background-image:url('../../png/index-icons/webcams.png');}
li#menu-rss {background-image:url('../../png/index-icons/rss.png');}
li#menu-results {background-image:url('../../png/index-icons/results.png');}
li#menu-z3950 {background-image:url('../../png/index-icons/z3950.png');}
li#menu-weather {background-image:url('../../png/index-icons/weather.png');}
/* End Index Page Specific */





/* Standard List Styles */
ul {
    list-style: none;
    padding: 0; margin: 0;
}

ul.stand-alone {
    margin: 10px;
}

ul li {
    font-size:12pt;
    color:#ffffff;
    border-top:1px solid #98a1ac;
    background-color:#002B4C;
    padding: 10px;
    padding-right: 10px; /* Moves background image (ul li a) away from edge */
    display:block;
}
ul li a {
    color:#ffffff;
    text-decoration:none;
    display:block;


    text-align: left;
    background-position: right center;
    background-repeat: no-repeat;
    background-image:url('../../png/icons/list-arrow.png'); /* Default background image */
}
/* Background images primarily for list items */
.phone {background:url('../../png/icons/list-phone.png') no-repeat;}
.email {background:url('../../png/icons/list-email.png') no-repeat;}
.external {background:url('../../png/icons/list-external.png') no-repeat;}
.external-mobile {background:url('../../png/icons/list-external-mobile.png') no-repeat;}
.audio {background:url('../../png/icons/list-audio.png') no-repeat;}
.video {background:url('../../png/icons/list-video.png') no-repeat;}
/* End background images for list items */
/* End Standard List Styles */




/* Breadcrumb Trail Styles */
div#bc-header {
    height:34px;
    width: 100%;
    background:url('../../png/new/gradients/bc-gradient.png') repeat-x top;
    overflow:hidden;
}
ol#bc {
    list-style:none;
    padding:0; margin:0;
    display:block;
}
ol#bc li {
    padding-right: 5px;
    border-style: none solid none none;
    border-width: 0 3px 0 0;
    border-color:white;
    display:block;
    float:left;
    height:30px;
    line-height:30px;
    overflow:hidden;
    -webkit-border-radius: 13px;
}
ol#bc li a {
    font-size:12pt;
    vertical-align: top;
    color: #ffffff;
    text-decoration:none;
}
ol#bc img {
    border:0;
}
h1#bc-title {
    margin: 0;
    padding-top: 12px;
    float:left;
    font-size:12pt;
    text-align:left;
    color:#ffffff;
    white-space: nowrap;
}
h1#bc-title.with-icon {
    background-repeat: no-repeat;
    background-position: left center;
    padding-left: 34px; /* Moves text to allow background breadcrumb image to coexist */
}
h1#bc-title.maps-header {     background-image:url('../../png/index-icons/maps-bc.png');}
h1#bc-title.contact-header {  background-image:url('../../png/index-icons/contact-bc.png');}
h1#bc-title.webcams-header {  background-image:url('../../png/index-icons/webcams-bc.png');}
h1#bc-title.podcasts-header { background-image:url('../../png/index-icons/podcasts-bc.png');}
h1#bc-title.results-header {  background-image:url('../../png/index-icons/results-bc.png');}
h1#bc-title.z3950-header {    background-image:url('../../png/index-icons/z3950-bc.png');}
h1#bc-title.rss-header {      background-image:url('../../png/index-icons/rss-bc.png');}
h1#bc-title.weather-header {  background-image:url('../../png/index-icons/weather-bc.png');}
/* End Breadcrumb Trail Styles */




/* Contact Search */
div.search {
    text-align: center;
    padding:5px; margin: 0;
}

div.search input#query {
    width:90%;
    font-size: 1.4em;
    height: 1.4em;
}

div.search button[type="submit"] {
    min-width: 80px ;
    font-size: 1.3em;
    min-height: 1.3em; 
}
/* End Contact Search */





/* Generic */
div.section {
    background:#B88C54 url('../../png/new/gradients/gradient-50-nrWhite-Transparent.png') repeat-x;
    margin:10px;
    -webkit-border-radius:8px;
}
h2.section-header {
    text-align:center;
    color:white;
    padding: 5px 0; margin: 0;
}
div.center {
    text-align:center;
}
div.bubble {    
   color:#002147;
   background-color:#ffffff;
   padding: 0;
   margin: 10px;
   -webkit-border-radius: 8px;
}

div.note {
    font-color: #ffffff;
    text-align:center;
    padding: 5px;
    font-size: 12pt;
}

div.note a{
    text-decoration: none;
    font-color: #002B4C;;
}

/* News Articles */
div.article {
    text-align: left;
    padding: 5px;
    font-color: #000000;
    font-size:12pt;
}

.round-top {
    -webkit-border-top-left-radius: 8px;
    -webkit-border-top-right-radius: 8px;
}
.round-bottom {
    -webkit-border-bottom-left-radius: 8px;
    -webkit-border-bottom-right-radius: 8px;
}

div.pad-10 {
    padding: 10px;
}
/* End Generic */

